--- a/api/.env
+++ b/api/.env
@@ -4,8 +4,7 @@ PORT=8080
 #Enum [debug, info, error]
 LOGGER_LEVEL=debug
 
-FRONT_URL=http://localhost:3000
-MONGODB_URI=mongodb://admin:admin@localhost:27017/admin?connectTimeoutMS=10000&authSource=admin&authMechanism=SCRAM-SHA-1
-
-VONAGE_API_KEY=47537941
-VONAGE_SECRET=f4f3b7c86f6ee77d915d87852e8e2beea659b4d8
+FRONT_URL=
+MONGODB_URI=
+VONAGE_API_KEY=
+VONAGE_SECRET=
